// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwipeAction left only 1`] = `
<div
  class="za-swipeaction"
>
  <div
    class="za-swipeaction-actions-left"
  >
    <div
      class="za-swipeaction-button theme-info"
    >
      <div
        class="za-swipeaction-text"
      >
        左按钮1
      </div>
    </div>
    <div
      class="za-swipeaction-button theme-warning"
    >
      <div
        class="za-swipeaction-text"
      >
        左按钮2
      </div>
    </div>
  </div>
  <div
    class="za-swipeaction-content"
    style="-webkit-transition-duration:undefinedms;transition-duration:undefinedms;-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  >
    <div>
      右滑
    </div>
  </div>
</div>
`;

exports[`SwipeAction renders correctly 1`] = `
<SwipeAction
  animationDuration={300}
  left={
    Array [
      Object {
        "onClick": [Function],
        "text": "左按钮1",
        "theme": "info",
      },
      Object {
        "onClick": [Function],
        "text": "左按钮2",
        "theme": "warning",
      },
    ]
  }
  moveDistanceRatio={0.5}
  moveTimeSpan={300}
  offset={10}
  prefixCls="za-swipeaction"
  right={
    Array [
      Object {
        "onClick": [Function],
        "text": "右按钮1",
        "theme": "error",
      },
      Object {
        "onClick": [Function],
        "text": "右按钮2",
        "theme": "success",
      },
    ]
  }
>
  <div
    className="za-swipeaction"
  >
    <div
      className="za-swipeaction-actions-left"
    >
      <div
        className="za-swipeaction-button theme-info"
        onClick={[Function]}
      >
        <div
          className="za-swipeaction-text"
        >
          左按钮1
        </div>
      </div>
      <div
        className="za-swipeaction-button theme-warning"
        onClick={[Function]}
      >
        <div
          className="za-swipeaction-text"
        >
          左按钮2
        </div>
      </div>
    </div>
    <div
      className="za-swipeaction-actions-right"
    >
      <div
        className="za-swipeaction-button theme-error"
        onClick={[Function]}
      >
        <div
          className="za-swipeaction-text"
        >
          右按钮1
        </div>
      </div>
      <div
        className="za-swipeaction-button theme-success"
        onClick={[Function]}
      >
        <div
          className="za-swipeaction-text"
        >
          右按钮2
        </div>
      </div>
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        className="za-swipeaction-content"
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTransform": "translate3d(0px, 0, 0)",
            "WebkitTransitionDuration": "undefinedms",
            "transform": "translate3d(0px, 0, 0)",
            "transitionDuration": "undefinedms",
          }
        }
      >
        <div>
          左右都能滑动
        </div>
      </div>
    </Drag>
  </div>
</SwipeAction>
`;

exports[`SwipeAction right only 1`] = `
<div
  class="za-swipeaction"
>
  <div
    class="za-swipeaction-actions-right"
  >
    <div
      class="za-swipeaction-button theme-info"
    >
      <div
        class="za-swipeaction-text"
      >
        左按钮1
      </div>
    </div>
    <div
      class="za-swipeaction-button theme-warning"
    >
      <div
        class="za-swipeaction-text"
      >
        左按钮2
      </div>
    </div>
  </div>
  <div
    class="za-swipeaction-content"
    style="-webkit-transition-duration:undefinedms;transition-duration:undefinedms;-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);"
  >
    <div>
      左滑
    </div>
  </div>
</div>
`;
